--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-setuptools-rust==1.1.2
-jinja2==3.0.3
-boto3==1.20.45
-botocore==1.23.45
-click==8.0.3
-requests==2.27.1
+setuptools-rust==1.5.2
+Jinja2==3.1.2
+boto3==1.26.7
+botocore==1.29.7
+click==8.1.3
+requests==2.28.1
 PyYAML==6.0
 defusedxml==0.7.1
 subresource-integrity==0.2
-jsonschema==3.2.0
+jsonschema==4.17.0
